--- a/src/app/componentes/noticia/noticia.component.html
+++ b/src/app/componentes/noticia/noticia.component.html
@@ -1,9 +1,17 @@
-<ion-card >
-  <ion-img *ngIf="article.urlToImage" [src]="article.urlToImage"></ion-img>
+<ion-card >  
   <ion-card-header>
-    <ion-card-subtitle>{{ i+1 }} {{article.author}}</ion-card-subtitle>
-    <ion-card-title>{{article.title}}</ion-card-title>
+    <ion-card-subtitle>{{ i+1 }} {{article.author}}
+      <div class="ellipsis" (click)="presentActionSheet(article)">
+        <ion-buttons slot="primary">
+          <ion-button>
+            <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </div>
+    </ion-card-subtitle>
+    <ion-card-title (click) = "showArticle(article)">{{article.title}}</ion-card-title>
   </ion-card-header>
+  <ion-img *ngIf="article.urlToImage" [src]="article.urlToImage" (click) = "showArticle(article)"></ion-img>
   <ion-card-content>
    {{article.content}}
   </ion-card-content>
