--- a/src/app/componentes/noticias/noticias.component.html
+++ b/src/app/componentes/noticias/noticias.component.html
@@ -1,7 +1,7 @@
 <ion-grid fixed>
   <ion-row>
     <ion-col size="12" size-lg="3" size-md="4" size-sm="6" *ngFor="let article of articles; let i = index">   
-      <app-noticia [article]="article" [i]="i" (click) = "showArticle(article)"></app-noticia>
+      <app-noticia [article]="article" [i]="i"></app-noticia>
     </ion-col>
   </ion-row>
 </ion-grid> 
