--- a/src/app/paginas/tab1/tab1.page.html
+++ b/src/app/paginas/tab1/tab1.page.html
@@ -8,4 +8,8 @@
 
 <ion-content [fullscreen]="true"> 
   <app-noticias [articles]="articles"></app-noticias>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Descargando...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
