--- a/src/app/paginas/tab2/tab2.page.html
+++ b/src/app/paginas/tab2/tab2.page.html
@@ -13,4 +13,8 @@
   </ion-segment-button> 
   </ion-segment>
   <app-noticias [articles]="articles"></app-noticias>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Descargando...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
